ProFit/objects/Event_Orginizer__c.object
<CustomObject>
    <description>Object for the Event Organizers.</description>
    <fields>
        <fullName>Address_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field for the Location of the Event.</description>
        <inlineHelpText>Input the Address of the Event.</inlineHelpText>
        <label>Address Book</label>
        <referenceTo>Address_Book__c</referenceTo>
        <relationshipLabel>Event Organizers</relationshipLabel>
        <relationshipName>Event_Organizers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Email__c</fullName>
        <description>Alternative Email of the Event Organizer.</description>
        <inlineHelpText>Put the secondary email of the Organizer.</inlineHelpText>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <description>This is for the alternative Phone of the Event Organizer.</description>
        <inlineHelpText>Please input another Phone number in case the other phone is unreachable.</inlineHelpText>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Text box for the Email of the Event Organizer.</description>
        <inlineHelpText>Primary email of the Organizer.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Primary phone number of the Event Organizer.</description>
        <inlineHelpText>Please input phone number for communication purposes.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Event Organizer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Orginizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>